--- a/assets/style.css
+++ b/assets/style.css
@@ -29,9 +29,10 @@ body {
 }
 
 
-.btn-large{
+.btn-flat{
 	background-color: rgba(0,104,55,1);
 	color: white;
+	float: right;
 }
 
 
@@ -48,5 +49,31 @@ body {
 
 .hidden{
 	display: none;
+}
+
+#topics_dropdown {
+	text-align: center;
+	width: 132px;
+	max-height: 177px;
+}
+
+input {
+	width: 13px;
+	height: 13px;
+	padding: 0;
+	margin: 0;
+	vertical-align: bottom;
+	position: relative;
+}
+
+label {
+	display: block;
+	padding-left: 15px;
+	text-indent: -15px;
+}
+
+
+[type="checkbox"]+label {
+	height: 40px;
 }
 
