--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,7 @@
 html,
 body {
 	background-image: url("6908618719_458251121f_o.jpg");
+	background-repeat: no-repeat;
     height: 100%;
     width: 100%;
     margin: 0;
