--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 }
 
 .brand-logo {
-	margin-left: 510px;
+	
 }
 
 #map {
@@ -18,6 +18,7 @@
 html,
 body {
 	background-image: url("6908618719_458251121f_o.jpg");
+	background-size: 800px;
 	background-repeat: no-repeat;
     height: 100%;
     width: 100%;
@@ -25,6 +26,7 @@ body {
     padding: 0;
 }
 .nav-wrapper{
+	height: 80px;
 	padding: 7px;
 	background-color: rgba(0,104,55,1);
 }
@@ -61,11 +63,9 @@ body {
 	padding: 5px;
 }
 
-input {
-	width: 13px;
-	height: 13px;
-	padding: 0;
-	margin: 0;
+.input-field {
+	padding: 10px;
+	margin: auto;
 	
 
 }
