--- a/assets/style.css
+++ b/assets/style.css
@@ -17,8 +17,9 @@
 
 html,
 body {
-	background-image: url("6908618719_458251121f_o.jpg");
+	background-image: url("burger.jpg");
 	background-repeat: no-repeat;
+	background-size: cover;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -79,5 +80,9 @@ label {
 
 [type="checkbox"]+label {
 	height: 40px;
+}
+
+.bodyContent {
+	font-weight: bold; 
 }
 
