--- a/assets/style.css
+++ b/assets/style.css
@@ -10,15 +10,24 @@
 }
 
 #map {
+	background-color: rgba(0,104,55,1);
+	border-style: solid;
+	border-width: 0px;
+	border-top-width: 8px;
+	/*-moz-border-image: -moz-linear-gradient(to left, rgba(234,190,129,1), rgba(192,131,41,1),rgba(234,232,217,1), rgba(207,238,137,1));
+	-webkit-border-image: -webkit-linear-gradient(to left, rgba(234,190,129,1), rgba(192,131,41,1),rgba(234,232,217,1), rgba(207,238,137,1));*/
+	border-image: linear-gradient(to left, rgba(234,190,129,1), rgba(192,131,41,1),rgba(244,232,217,1), rgba(237,208,137,1));
+	border-image-slice: 1;
 	margin: auto;
 	width: 100%;
-    height: 300px;
+    height: 100%
+
 }
 
 html,
 body {
 	background-image: url("6908618719_458251121f_o.jpg");
-	background-size: 800px;
+	background-size: cover;
 	background-repeat: no-repeat;
     height: 100%;
     width: 100%;
@@ -50,6 +59,7 @@ body {
 	height:40%;
 }
 .svg-container{
+	z-index: 1;
 	padding: 20px;
 }
 
